--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
   <body>
   <header class="site-header" role="banner">
       <div class="container">
-        <a href="/" class="logo"><img src="{% asset_path logo.png %}" alt="Rich Grundy" class="site-logo"></a>
+        <a href="/" class="logo"><img src="{% logo.png %}" alt="Rich Grundy" class="site-logo"></a>
 
         <nav role="navigiation">
           <ul class="site-nav">
