--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,10 +1,9 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
+      <img class="img-circle" src="{{ "/assets/homer1.jpg" | prepend: site.url }}"></img>
       <h1>
-        <a href="{{ site.baseurl }}">
           {{ site.title }}
-        </a>
       </h1>
       <p class="lead">{{ site.description }}</p>
     </div>
@@ -26,9 +25,9 @@
         {% endif %}
       {% endfor %}
 
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
+      <!--<a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-      <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+      <span class="sidebar-nav-item">Currently v{{ site.version }}</span>-->
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
