--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,9 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <img class="img-circle" src="{{ "/assets/homer1.jpg" | prepend: site.url }}"></img>
+      <a href="{{ site.url }}">
+        <img class="img-circle" src="{{ "/assets/homer1.jpg" | prepend: site.url }}"></img>
+      </a>
       <h1>
           {{ site.title }}
       </h1>
