--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 
   <title>
     {% if page.title == "Home" %}
-      Posts &middot; {{ site.tagline }}
+      {{ site.hometitle }} &middot; {{ site.tagline }}
     {% else %}
       {{ page.title }} &middot; {{ site.tagline }}
     {% endif %}
