--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
   {% if page.comments %}
     <div id="disqus_thread"></div>
       <script>
-      (function() { // DON'T EDIT BELOW THIS LINE
+      (function() {
       var d = document, s = d.createElement('script');
       s.src = 'https://mirchetoshevski.disqus.com/embed.js';
       s.setAttribute('data-timestamp', +new Date());
@@ -25,7 +25,7 @@ layout: default
 <div class="related">
   <h2>Related Posts</h2>
   <ul class="related-posts">
-    {% for post in site.related_posts limit:3 %}
+    {% for post in site.related_posts limit:5 %}
       <li>
         <h3>
           <a href="{{ post.url }}">
