--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -62,6 +62,11 @@ html {
 
 .img-circle {
     border-radius: 50%;
+    transition-duration: 1s;
+}
+
+.img-circle:hover {
+  transform: rotate(360deg);
 }
 
 @media (min-width: 48em) {
