--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
 
     <div class="content container">
       {{ content }}
+      <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
     </div>
 
   </body>
