--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }} &middot; Read this in {{ page.content | reading_time }}</span>
+  <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
   <hr />
   {% if page.comments %}
