--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,5 @@
 <div class="sidebar">
-  <div class="container sidebar-sticky">
+  <div class="container">
     <div class="sidebar-about">
       <a href="{{ site.url }}">
         <img class="img-circle" src="{{ "/assets/homer1.jpg" | prepend: site.url }}"></img>
