--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -55,7 +55,7 @@ html {
 
 .sidebar {
   text-align: center;
-  padding: 0 1rem 2rem 1rem;
+  padding: 0.1rem 1rem 2rem 1rem;
   color: rgba(255,255,255,.5);
   background-color: #202020;
 }
