--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,7 +11,7 @@
     </div>
 
     <nav class="sidebar-nav">
-      <a class="sidebar-nav-item{% if page.url == site.url %} active{% endif %}" href="{{ site.url }}">Home</a>
+      <a class="sidebar-nav-item{% if page.url == site.url %} active{% endif %}" href="{{ site.url }}" onclick="ga('send', 'event', 'Sidebar', 'Open-Home-From', '{{ page.url }}}', 10, { 'nonInteraction': 1 });">Home</a>
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
@@ -22,7 +22,7 @@
       {% for node in pages_list %}
         {% if node.title != null %}
           {% if node.layout == "page" %}
-            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
+            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}" onclick="ga('send', 'event', 'Sidebar', 'Open-{{ node.title }}', '{{ node.url }}}', 10, { 'nonInteraction': 1 });">{{ node.title }}</a>
           {% endif %}
         {% endif %}
       {% endfor %}
