--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,6 @@ layout: default
       })();
       </script>
     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-                            
   {% endif %}
 
   
@@ -30,7 +29,7 @@ layout: default
     {% for post in site.related_posts limit:5 %}
       <li>
         <h3>
-          <a href="{{ post.url }}">
+          <a href="{{ post.url }}" onclick="ga('send', 'event', 'RelatedPosts', 'O: {{ post.title }}', '{{ page.url }}}', 10, { 'nonInteraction': 1 });">
             {{ post.title }}
             <small>{{ post.date | date_to_string }}</small>
           </a>
