--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="sidebar-about">
       <a href="{{ site.url }}">
-        <img class="img-circle" src="{{ "/assets/homer1.jpg" | prepend: site.url }}"></img>
+        <div data-tilt data-tilt-reverse="true" data-tilt-reset="false"><img class="img-circle " src="{{ "/assets/homer1.jpg" | prepend: site.url }}"></img></div>
       </a>
       <h1>
           {{ site.title }}
