--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,8 @@
       {{ content }}
       <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
     </div>
-
+	
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  	<script src="{{ site.url }}/assets/js/vanilla-tilt.min.js"></script>
   </body>
 </html>
