--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -66,6 +66,7 @@ html {
     border-radius: 50%;
     transition-duration: 1s;
     margin: 1rem auto;
+    transform: translateZ(20px)
 }
 
 @media (min-width: 48em) {
