--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="sidebar-about">
       <a href="{{ site.url }}">
-        <div data-tilt data-tilt-reverse="true" data-tilt-scale="1.1" data-tilt-max="80" data-tilt-speed="1000" data-tilt-perspective="1000" data-tilt-glare data-tilt-max-glare="0.8" style="color: rgba(255,255,255,.1);; transform-style: preserve-3d;"><img class="img-circle " src="{{ "/assets/homer1.jpg" | prepend: site.url }}"></img></div>
+        <div data-tilt data-tilt-reverse="true" data-tilt-scale="1.1" data-tilt-max="80" data-tilt-speed="1000" data-tilt-perspective="1000" data-tilt-glare data-tilt-max-glare="0.8" class="img-wrapper"><img class="img-circle " src="{{ "/assets/homer1.jpg" | prepend: site.url }}"></img></div>
       </a>
       <h1>
           {{ site.title }}
