--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -66,12 +66,15 @@ html {
     border-radius: 50%;
     transition-duration: 1s;
     margin: 1rem auto;
-    transform: translateZ(20px)
+    transform: translateZ(50px)
 }
 
 .img-wrapper {
   color: rgba(255,255,255,.1);
   border-radius: 50%; 
+  width: 24vh;
+  height: 24vh;
+  margin: 0 auto;
   transform-style: preserve-3d;
 }
 
