--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -333,6 +333,10 @@ tbody tr:nth-child(odd) th {
   margin-bottom: 4em;
 }
 
+.post {
+  border-bottom: 8px dotted #202020;
+}
+
 .post-list {
   margin-bottom: 0 !important;
 }
