--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html>
 
   {% include head.html %}
 
   <body>
 
-    {% include sidebar.html %}
-
-    <div class="content container">
+    <main>
       {{ content }}
-      <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
-    </div>
-	
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  	<script src="{{ site.url }}/assets/js/vanilla-tilt.min.js"></script>
+    </main>
+
+    {% include footer.html %}
+
   </body>
+
 </html>
