--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,14 +1,36 @@
 ---
 layout: default
 ---
+<article itemprop="blogPost" itemscope itemtype="http://schema.org/BlogPosting">
 
-<div class="post">
-  <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span>
-  {{ content }}
-  <hr />
+  <header class="section-padding--lg mast rellax" data-rellax-speed="-4">
+    <a class="nav nav--white" href="{{ site.baseurl }}/">
+      <i class="fa fa-lg fa-arrow-left"></i>
+      <span>Back to Posts</span>
+    </a>
+    <figure class="absolute-bg mast__img" style="background-image: url('{{ page.image }}');"></figure>
+    <div class="mast__container">
+      <span><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></span>
+      <h1 itemprop="name headline">{{ page.title }}</h1>
+      {% if page.categories.size > 0 %}
+        <span>Posted in 
+          {% for category in page.categories %}
+            <a class="nav--white" href="{{ site.baseurl }}/category/{{ category | downcase | slugify }}">{{ category }}</a>{% if forloop.last == false %}, {% endif %}
+          {% endfor %}
+        </span>
+      {% endif %}
+      <span></span>
+    </div>
+  </header>
+
+  <section class="section-padding bg-grey" itemprop="articleBody">
+    <div class="post">
+      {{ content }}
+    </div>
+  </section>
+  
   {% if page.comments %}
-    <div id="disqus_thread"></div>
+    <div id="disqus_thread" class="profile"></div>
       <script>
       (function() {
       var d = document, s = d.createElement('script');
@@ -18,23 +40,42 @@ layout: default
       })();
       </script>
     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-  {% endif %}
+	{% endif %}
 
-  
-</div>
+  <section class="profile">
+    <div class="profile__card">
+      <div class="profile__img">
+        <figure class="absolute-bg" style="background-image: url('{{ site.profile_img }}');"></figure>
+      </div>
+      <div class="profile__container">
+        <p>{{ site.profile }}</p>
+        {% if site.email or site.social %}
+          <ul class="profile__social">
+            {% if site.email %}
+              <li><a class="fa fa-lg fa-envelope-o" href="mailto:{{ site.email }}"></a></li>
+            {% endif %}
+            {% for social in site.social %}
+              <li><a class="fa fa-lg fa-{{ social[0] }}" href="{{ social[1] }}" target="_blank"></a></li>
+            {% endfor %}
+          </ul>
+        {% endif %}
+      </div>
+    </div>
+  </section>
 
-<div class="related">
-  <h2>Related Posts</h2>
-  <ul class="related-posts">
-    {% for post in site.related_posts limit:5 %}
-      <li>
-        <h3>
-          <a href="{{ post.url }}" onclick="ga('send', 'event', 'RelatedPosts', 'O: {{ post.title }}', '{{ page.url }}}', 10, { 'nonInteraction': 1 });">
-            {{ post.title }}
-            <small>{{ post.date | date_to_string }}</small>
-          </a>
-        </h3>
-      </li>
-    {% endfor %}
-  </ul>
-</div>
+</article>
+
+
+
+{% if page.previous.url %}
+  <section class="next">
+    <a class="next__link" 
+		href="{{page.previous.url | prepend: site.baseurl }}" style="background-image: url('{{ page.previous.image }}');"
+		onclick="ga('send', 'event', 'RelatedPosts', 'O: {{page.previous.title}}', '{{page.previous.url | prepend: site.baseurl }}', 10, { 'nonInteraction': 1 });">
+      <div class="next__container">
+        <span>Read Next</span>
+        <h2>{{page.previous.title}}</h2>
+      </div>
+    </a>
+  </section>
+{% endif %}
