--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ layout: default
     </div>
   </header>
 
-  <section class="section-padding bg-grey" itemprop="articleBody">
+  <section class="section-padding bg-white" itemprop="articleBody">
     <div class="post">
       {{ content }}
     </div>
