--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,7 +40,7 @@ layout: default
       })();
       </script>
     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-	{% endif %}
+	{% else %}
 
   <section class="profile">
     <div class="profile__card">
@@ -62,6 +62,7 @@ layout: default
       </div>
     </div>
   </section>
+  {% endif %}
 
 </article>
 
